--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,20 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio-tungstenite = { version = '0.14', features = ["rustls"] }
+tokio = { version = "1", features = ["full"] }
+futures = "0.3"
+log = "0.4"
+pretty_env_logger = "0.4"
+url = "2.2"
+anyhow = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+[[bin]]
+name = "proxy-client"
+path = "src/proxy_client.rs"
+
+[[bin]]
+name = "proxy-server"
+path = "src/proxy_server.rs"
