--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ url = "2.2"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 [[bin]]
 name = "proxy-client"
