--- a/proxy_client/Cargo.toml
+++ b/proxy_client/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = "0.2"
 warp = "0.3"
 lazy_static = "1.4"
 base64 = "0.13"
+thiserror = "1.0"
 
 [dev-dependencies]
 serial_test = "*"
