--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 magic_tunnel_lib = { version = "0.1.0", path = "../proxy_lib" }
+magic_tunnel_client = { version = "0.1.0", path = "../proxy_client" }
 tokio-tungstenite = { version = '0.14', features = ["rustls"] }
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
@@ -26,6 +27,7 @@ dashmap = "4.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
+serial_test = "*"
 
 [[bin]]
 name = "proxy-server"
