--- a/proxy_test/Cargo.toml
+++ b/proxy_test/Cargo.toml
@@ -25,6 +25,9 @@ warp = "0.3"
 lazy_static = "1.4"
 base64 = "0.13"
 dashmap = "4.0"
+magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main" }
+once_cell = "1.8"
+chrono = "0.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
