--- a/proxy_client/Cargo.toml
+++ b/proxy_client/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 magic_tunnel_lib = { version = "0.1.0", path = "../proxy_lib" }
 tokio-tungstenite = { version = '0.14', features = ["rustls"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.6.8"
 futures = "0.3"
 log = "0.4"
 pretty_env_logger = "0.4"
