--- a/proxy_test/Cargo.toml
+++ b/proxy_test/Cargo.toml
@@ -12,6 +12,7 @@ magic_tunnel_client = { version = "0.1.0", path = "../proxy_client" }
 magic_tunnel_server = { version = "0.1.0", path = "../proxy_server" }
 tokio-tungstenite = { version = '0.14', features = ["rustls"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.6.8"
 futures = "0.3"
 log = "0.4"
 pretty_env_logger = "0.4"
