--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -11,6 +11,7 @@ magic_tunnel_lib = { version = "0.1.1", path = "../proxy_lib" }
 magic_tunnel_client = { version = "0.1.2", path = "../proxy_client" }
 tokio-tungstenite = { version = '0.14', features = ["rustls"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.6.8"
 futures = "0.3"
 log = "0.4"
 pretty_env_logger = "0.4"
