--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -27,7 +27,7 @@ base64 = "0.13"
 dashmap = "4.0"
 thiserror = "1.0"
 rand = { version = "0.8", features = ["small_rng"] }
-magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main" }
+magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.2" }
 once_cell = "1.8"
 chrono = "0.4"
 
