--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "magic_tunnel_server"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Kumassy <kumassyii@gmail.com>"]
 edition = "2018"
 
@@ -27,9 +27,10 @@ base64 = "0.13"
 dashmap = "4.0"
 thiserror = "1.0"
 rand = { version = "0.8", features = ["small_rng"] }
-magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.2" }
+magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.3" }
 once_cell = "1.8"
 chrono = "0.4"
+structopt = "0.3.25"
 
 [dev-dependencies]
 tokio-test = "0.4"
