--- a/proxy_client/Cargo.toml
+++ b/proxy_client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "magic_tunnel_client"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["Kumassy <kumassyii@gmail.com>"]
 edition = "2018"
 
@@ -24,8 +24,8 @@ warp = "0.3"
 lazy_static = "1.4"
 base64 = "0.13"
 thiserror = "1.0"
-magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.3" }
 structopt = "0.3.25"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 
 [dev-dependencies]
 serial_test = "*"
