--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -20,7 +20,10 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
-tracing-subscriber = "0.2"
+tracing-subscriber = { version = "0.3", features = ["std", "env-filter"]}
+tracing-opentelemetry = "0.16"
+opentelemetry-jaeger = "0.15"
+opentelemetry = "0.16"
 warp = "0.3"
 lazy_static = "1.4"
 base64 = "0.13"
