--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "magic_tunnel_server"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Kumassy <kumassyii@gmail.com>"]
 edition = "2018"
 
@@ -20,7 +20,7 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["std", "env-filter"]}
+tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json"]}
 tracing-opentelemetry = "0.17"
 opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"]}
 opentelemetry = { version = "0.17", features = ["rt-tokio"] }
