--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -34,6 +34,8 @@ magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git"
 once_cell = "1.8"
 chrono = "0.4"
 structopt = "0.3.25"
+metrics = "0.19.0"
+metrics-exporter-prometheus = "0.10.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
