--- a/proxy_client/Cargo.toml
+++ b/proxy_client/Cargo.toml
@@ -18,6 +18,7 @@ url = "2.2"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rmp-serde = "1.1"
 lazy_static = "1.4"
 warp = "0.3"
 thiserror = "1.0"
