--- a/proxy_lib/Cargo.toml
+++ b/proxy_lib/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+rmp-serde = "1.1"
 base64 = "0.13"
 rand = "0.8"
 sha2 = "0.9"
+uuid = { version = "1.1", features = ["v4", "serde"] }
