--- a/proxy_server/Cargo.toml
+++ b/proxy_server/Cargo.toml
@@ -19,6 +19,7 @@ url = "2.2"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rmp-serde = "1.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "json"]}
 tracing-opentelemetry = "0.17"
