--- a/proxy_test/Cargo.toml
+++ b/proxy_test/Cargo.toml
@@ -20,6 +20,7 @@ url = "2.2"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rmp-serde = "1.1"
 tracing = "0.1"
 tracing-subscriber = "0.2"
 warp = "0.3"
