--- a/proxy_client/Cargo.toml
+++ b/proxy_client/Cargo.toml
@@ -24,6 +24,7 @@ warp = "0.3"
 thiserror = "1.0"
 structopt = "0.3.25"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+dashmap = "4.0"
 
 [[bin]]
 name = "proxy-client"
