--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,27 +17,26 @@ jobs:
     - name: Run
       run: cargo test
 
-  build:
+  release:
+    name: release ${{ matrix.target }}
     runs-on: ubuntu-latest
-    needs: test
-
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - target: x86_64-pc-windows-gnu
+            archive: zip
+          - target: x86_64-unknown-linux-musl
+            archive: tar.gz tar.xz
+          - target: x86_64-apple-darwin
+            archive: zip
+            
     steps:
-    - uses: actions/checkout@v2
-    - uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.DEPLOY_KEY_SECRET }}
-
-    - name: Build binary
-      run: docker run --rm -u root -v ${HOME}/.ssh:/root/.ssh -v $SSH_AUTH_SOCK:/ssh-agent -e SSH_AUTH_SOCK=/ssh-agent -v `pwd`:/home/rust/src ekidd/rust-musl-builder cargo build --release
-
-    - name: save artifacts -- proxy-server
-      uses: actions/upload-artifact@v2
-      with:
-        name: proxy-server
-        path: ./target/x86_64-unknown-linux-musl/release/proxy-server
-
-    - name: save artifacts -- proxy-client
-      uses: actions/upload-artifact@v2
-      with:
-        name: proxy-client
-        path: ./target/x86_64-unknown-linux-musl/release/proxy-client
+      - uses: actions/checkout@master
+      - name: Compile and release
+        uses: rust-build/rust-build.action@v1.3.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          RUSTTARGET: ${{ matrix.target }}
+          ARCHIVE_TYPES: ${{ matrix.archive }}
