--- a/ownserver_lib/Cargo.toml
+++ b/ownserver_lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "magic_tunnel_lib"
+name = "ownserver_lib"
 version = "0.4.0"
 authors = ["Kumassy <kumassyii@gmail.com>"]
 edition = "2018"
