--- a/ownserver_server/Cargo.toml
+++ b/ownserver_server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "magic_tunnel_server"
+name = "ownserver_server"
 version = "0.4.1"
 authors = ["Kumassy <kumassyii@gmail.com>"]
 edition = "2018"
@@ -7,8 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-magic_tunnel_lib = { version = "0.4.0", path = "../proxy_lib" }
-magic_tunnel_client = { version = "0.4.0", path = "../proxy_client" }
+ownserver_lib = { version = "0.4.0", path = "../ownserver_lib" }
+ownserver = { version = "0.4.0", path = "../ownserver" }
 tokio-tungstenite = { version = '0.14', features = ["rustls"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.6.8"
@@ -43,5 +43,5 @@ tokio-test = "0.4"
 serial_test = "*"
 
 [[bin]]
-name = "proxy-server"
+name = "ownserver-server"
 path = "src/main.rs"
