--- a/ownserver_server/Cargo.toml
+++ b/ownserver_server/Cargo.toml
@@ -31,7 +31,7 @@ base64 = "0.13"
 dashmap = "4.0"
 thiserror = "1.0"
 rand = { version = "0.8", features = ["small_rng"] }
-magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.3" }
+ownserver-auth = { git = "https://github.com/Kumassy/ownserver-auth.git", branch = "main", version = "0.2.0" }
 once_cell = "1.8"
 chrono = "0.4"
 structopt = "0.3.25"
