--- a/ownserver_test/Cargo.toml
+++ b/ownserver_test/Cargo.toml
@@ -27,7 +27,7 @@ warp = "0.3"
 lazy_static = "1.4"
 base64 = "0.13"
 dashmap = "4.0"
-magic-tunnel-auth = { git = "ssh://git@github.com/Kumassy/magic-tunnel-auth.git", branch = "main", version = "0.1.3" }
+ownserver-auth = { git = "https://github.com/Kumassy/ownserver-auth.git", branch = "main", version = "0.2.0" }
 once_cell = "1.8"
 chrono = "0.4"
 
