--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,13 @@
 name: Test and build
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [created]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.DEPLOY_KEY_SECRET }}
-    - name: Run
-      run: cargo test
-
   release:
     name: release ${{ matrix.target }}
     runs-on: ubuntu-latest
-    needs: test
     strategy:
       fail-fast: false
       matrix:
@@ -34,15 +21,11 @@ jobs:
             
     steps:
       - uses: actions/checkout@master
-      - uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY_SECRET }}
-
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.3.2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SRC_DIR: proxy_client
+          SRC_DIR: ownserver
         with:
           RUSTTARGET: ${{ matrix.target }}
           ARCHIVE_TYPES: ${{ matrix.archive }}
