--- a/ownserver_server/Cargo.toml
+++ b/ownserver_server/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 ownserver_lib = { version = "0.4.0", path = "../ownserver_lib" }
 ownserver = { version = "0.4.0", path = "../ownserver" }
 tokio-tungstenite = { version = '0.14', features = ["rustls"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", "tracing"] }
 tokio-util = "0.6.8"
 futures = "0.3"
 log = "0.4"
