--- a/ownserver/Cargo.toml
+++ b/ownserver/Cargo.toml
@@ -31,6 +31,7 @@ thiserror = "1.0"
 structopt = "0.3"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 dashmap = "5.3"
+bytes = "1.0"
 
 [[bin]]
 name = "ownserver"
