--- a/ownserver_lib/Cargo.toml
+++ b/ownserver_lib/Cargo.toml
@@ -20,3 +20,5 @@ base64 = "0.13"
 rand = "0.8"
 sha2 = "0.10"
 uuid = { version = "1.1", features = ["v4", "serde"] }
+tokio-util = "0.7.8"
+bytes = "1.0"
