--- a/ownserver_server/Cargo.toml
+++ b/ownserver_server/Cargo.toml
@@ -37,6 +37,7 @@ chrono = "0.4"
 structopt = "0.3.25"
 metrics = "0.20"
 metrics-exporter-prometheus = "0.11"
+bytes = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
