--- a/ownserver_test/Cargo.toml
+++ b/ownserver_test/Cargo.toml
@@ -30,6 +30,7 @@ dashmap = "5.3"
 ownserver-auth = { git = "https://github.com/Kumassy/ownserver-auth.git", branch = "main", version = "0.2.0" }
 once_cell = "1.8"
 chrono = "0.4"
+bytes = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
