--- a/ownserver/Cargo.toml
+++ b/ownserver/Cargo.toml
@@ -28,10 +28,10 @@ serde_json = "1.0"
 rmp-serde = "1.1"
 warp = "0.3"
 thiserror = "1.0"
-structopt = "0.3"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 dashmap = "5.3"
 bytes = "1.0"
+clap = { version = "4.4.2", features = ["derive"] }
 
 [[bin]]
 name = "ownserver"
