--- a/ownserver_lib/Cargo.toml
+++ b/ownserver_lib/Cargo.toml
@@ -21,3 +21,4 @@ sha2 = "0.10"
 uuid = { version = "1.1", features = ["v4", "serde"] }
 tokio-util = "0.7.8"
 bytes = "1.0"
+chrono = { version="0.4.38", features = ["serde"] }
