--- a/ownserver/Cargo.toml
+++ b/ownserver/Cargo.toml
@@ -32,6 +32,7 @@ reqwest = { version = "0.11", default-features = false, features = ["json", "rus
 dashmap = "5.3"
 bytes = "1.0"
 clap = { version = "4.4.2", features = ["derive"] }
+chrono = { version="0.4.38" }
 
 [[bin]]
 name = "ownserver"
