--- a/ownserver_lib/Cargo.toml
+++ b/ownserver_lib/Cargo.toml
@@ -19,7 +19,10 @@ rmp-serde = "1.1"
 rand = "0.8"
 sha2 = "0.10"
 uuid = { version = "1.1", features = ["v4", "serde"] }
-tokio-util = "0.7.8"
+tokio-util = { version = "0.7.8", features = ["full"] }
 bytes = "1.0"
 chrono = { version="0.4.38", features = ["serde"] }
 jsonwebtoken = "7"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
