--- a/ownserver/Cargo.toml
+++ b/ownserver/Cargo.toml
@@ -30,9 +30,9 @@ warp = "0.3"
 thiserror = "2.0"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 dashmap = "6.1"
-bytes = "1.9"
+bytes = "1.10"
 clap = { version = "4.4.2", features = ["derive"] }
-chrono = { version="0.4.38" }
+chrono = "0.4.40"
 
 [[bin]]
 name = "ownserver"
